--- a/documentation/index.html
+++ b/documentation/index.html
@@ -35,7 +35,13 @@
 <p>This project require env file in the root with next params</p>
 <div><pre class="line-numbers"><code class="language-bash">IDENTY_DATABASE_URI=&quot;postgresql://root:root&#64;localhost:5432/identy&quot;
 IDENTY_SECRET=&quot;super_secret&quot;
-IDENTY_REFRESH_SECRET=&quot;refresh_super_secret&quot;</code></pre></div>
+IDENTY_REFRESH_SECRET=&quot;refresh_super_secret&quot;</code></pre></div><h1 id="docs">Docs</h1>
+<h2 id="project-docs">Project docs</h2>
+<p>To lauch projects docs run in terminal:</p>
+<div><pre class="line-numbers"><code class="language-bash">npx &#64;compodoc/compodoc -p tsconfig.json -s </code></pre></div><p>That&#39;s command will generate docs in <code>documantation</code> dir and run it on <a href="http://localhost:8080">http://localhost:8080</a></p>
+<h2 id="swagger-docs">Swagger docs</h2>
+<p>When you launch server that starts swagger docs on <a href="http://localhost:3000/swagger/">http://localhost:3000/swagger/</a></p>
+
 
 
 
