--- a/documentation/miscellaneous/enumerations.html
+++ b/documentation/miscellaneous/enumerations.html
@@ -86,6 +86,12 @@
                         <span class="name "><b>DecodeType</b><a href="#DecodeType"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>dedoce type enum show status of decode</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;Valid
@@ -116,6 +122,12 @@
                         <span class="name "><b>ExpirationStatus</b><a href="#ExpirationStatus"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>enum of experation status</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;Expired
@@ -149,6 +161,12 @@
                         <span class="name "><b>Role</b><a href="#Role"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Users roles enum</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;User
