--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -69,9 +69,6 @@
                         <li>
                             <a href="#ROLES_KEY" title="src/auth/roles.decorator.ts" ><b>ROLES_KEY</b>&nbsp;&nbsp;&nbsp;(src/.../roles.decorator.ts)</a>
                         </li>
-                        <li>
-                            <a href="#Testing" title="pkg/tesing/index.ts" ><b>Testing</b>&nbsp;&nbsp;&nbsp;(pkg/.../index.ts)</a>
-                        </li>
                     </ul>
                 </td>
             </tr>
@@ -114,6 +111,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>AuthService errors</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -137,6 +140,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Roles decorator</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -163,48 +172,12 @@
                     </td>
                 </tr>
 
-
-        </tbody>
-    </table>
-</section>
-    <h3>pkg/tesing/index.ts</h3>
-    <section>
-    <h3></h3>    <table class="table table-sm table-bordered">
-        <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="Testing"></a>
-                    <span class="name">
-                        <span ><b>Testing</b></span>
-                        <a href="#Testing"><span class="icon ion-ios-link"></span></a>
-                    </span>
+                    <div class="io-description"><p>Roles key in context</p>
+</div>
                 </td>
             </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/object" target="_blank" >object</a></code>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>{
-    testDatabase(): DynamicModule {
-        return TypeOrmModule.forRoot({
-            type: &quot;postgres&quot;,
-            host: &quot;localhost&quot;,
-            port: 5432,
-            username: &quot;root&quot;,
-            password: &quot;root&quot;,
-            database: &quot;identy&quot;,
-            autoLoadEntities: true,
-            synchronize: true
-          })
-    }
-}</code>
-                    </td>
-                </tr>
-
 
         </tbody>
     </table>
