--- a/documentation/classes/CreateUserDto.html
+++ b/documentation/classes/CreateUserDto.html
@@ -66,6 +66,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Create user body</p>
+
+            </p>
 
 
 
@@ -135,10 +142,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/auth/dto/create-user.dto.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/auth/dto/create-user.dto.ts:31</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>name of user</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -170,10 +183,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/auth/dto/create-user.dto.ts:9</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/auth/dto/create-user.dto.ts:21</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>phoneNumber</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -192,36 +211,83 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { ApiProperty } from &quot;@nestjs/swagger&quot;
 import { IsPhoneNumber, IsString, Length } from &quot;class-validator&quot;
 
+/**
+ * Create user body
+ *
+ * @export
+ * @class CreateUserDto
+ */
 export class CreateUserDto {
+    /**
+     * phoneNumber
+     *
+     * @type {string}
+     * @memberof CreateUserDto
+     */
     @ApiProperty({
             example: &quot;+7 (936) 134 14 24&quot;,
     })
     @IsPhoneNumber(&quot;RU&quot;)
     phoneNumber: string
 
+    /**
+     * name of user
+     *
+     * @type {string}
+     * @memberof CreateUserDto
+     */
     @ApiProperty()
     @IsString({message: &quot;should be a string&quot;})
     name: string
 }
 
 
+/**
+ * create user responce
+ *
+ * @export
+ * @class UserCreateResp
+ */
 export class UserCreateResp {
+    /**
+     * Creates an instance of UserCreateResp.
+     * @param {{id: number, phoneNumber: string, name: string}} user
+     * @memberof UserCreateResp
+     */
     constructor(user: {id: number, phoneNumber: string, name: string}) {
         this.id &#x3D; user.id
         this.phoneNumber &#x3D; user.phoneNumber
         this.name &#x3D; user.name
     }
 
+    /**
+     * user id
+     *
+     * @type {number}
+     * @memberof UserCreateResp
+     */
     @ApiProperty({
         example: 1,
     })
     id: number
 
+    /**
+     * user phone nubmer
+     *
+     * @type {string}
+     * @memberof UserCreateResp
+     */
     @ApiProperty({
         example: &quot;81375461323&quot;,
     })
     phoneNumber: string;
 
+    /**
+     * user name
+     *
+     * @type {string}
+     * @memberof UserCreateResp
+     */
     @ApiProperty({
         example: &quot;Some name&quot;
     })
