--- a/documentation/classes/LoginAdminDto.html
+++ b/documentation/classes/LoginAdminDto.html
@@ -66,6 +66,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Login admin body</p>
+
+            </p>
 
 
 
@@ -135,10 +142,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="7" class="link-to-prism">src/auth/dto/login-admin.dto.ts:7</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/auth/dto/login-admin.dto.ts:19</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>admin email</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -170,10 +183,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/auth/dto/login-admin.dto.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/auth/dto/login-admin.dto.ts:29</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>admin password</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -192,11 +211,29 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { ApiProperty } from &quot;@nestjs/swagger&quot;;
 import { IsEmail, IsString } from &quot;class-validator&quot;;
 
+/**
+ * Login admin body
+ *
+ * @export
+ * @class LoginAdminDto
+ */
 export class LoginAdminDto {
+    /**
+     * admin email
+     *
+     * @type {string}
+     * @memberof LoginAdminDto
+     */
     @ApiProperty({example: &quot;user@example.com&quot;})
     @IsEmail()
     email: string
 
+    /**
+     * admin password
+     *
+     * @type {string}
+     * @memberof LoginAdminDto
+     */
     @ApiProperty({example:&quot;qwerty&quot;})
     @IsString()
     password: string
