--- a/documentation/entities/BaseUser.html
+++ b/documentation/entities/BaseUser.html
@@ -60,6 +60,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>base user entity representaion</p>
+
+            </p>
 
 
             <section>
@@ -123,10 +130,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="6" class="link-to-prism">src/auth/entity/baseuser.entity.ts:6</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/auth/entity/baseuser.entity.ts:18</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>id of user</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -137,8 +150,20 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Entity, PrimaryGeneratedColumn} from &#x27;typeorm&#x27;;
 
+/**
+ * base user entity representaion
+ *
+ * @export
+ * @class BaseUser
+ */
 @Entity({name: &quot;BaseUser&quot;})
 export class BaseUser {
+    /**
+     * id of user
+     *
+     * @type {number}
+     * @memberof BaseUser
+     */
     @PrimaryGeneratedColumn()
     id: number;
 }
