--- a/documentation/entities/User.html
+++ b/documentation/entities/User.html
@@ -60,6 +60,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>user entity represantation</p>
+
+            </p>
 
 
             <section>
@@ -129,10 +136,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/auth/entity/user.entity.ts:9</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/auth/entity/user.entity.ts:21</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>edge to base user</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -164,10 +177,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/auth/entity/user.entity.ts:19</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">src/auth/entity/user.entity.ts:50</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>name of user</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -199,10 +218,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/auth/entity/user.entity.ts:16</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/auth/entity/user.entity.ts:41</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>unique phone number</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -215,19 +240,50 @@
 import { BaseUser } from &quot;./baseuser.entity&quot;;
 import { UserSmsCode } from &quot;./user_sms_code.entity&quot;;
 
+/**
+ * user entity represantation
+ *
+ * @export
+ * @class User
+ */
 @Entity({name: &quot;User&quot;})
 export class User {
+    /**
+     * edge to base user
+     *
+     * @type {BaseUser}
+     * @memberof User
+     */
     @OneToOne(() &#x3D;&gt; BaseUser, type &#x3D;&gt; type, {primary: true, onDelete: &quot;CASCADE&quot;, eager: true})
     @JoinColumn()
     baseUser: BaseUser;
 
+    /**
+     * id getter
+     *
+     * @readonly
+     * @type {number}
+     * @memberof User
+     */
     get id(): number {
         return this.baseUser.id
     }
 
+    /**
+     * unique phone number
+     *
+     * @type {string}
+     * @memberof User
+     */
     @Column({length: 18, unique: true})
     phoneNumber: string;
 
+    /**
+     * name of user
+     *
+     * @type {string}
+     * @memberof User
+     */
     @Column()
     name: string;
 }</code></pre>
