--- a/documentation/entities/UserSmsCode.html
+++ b/documentation/entities/UserSmsCode.html
@@ -60,6 +60,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>user sms code entity represantation</p>
+
+            </p>
 
 
             <section>
@@ -129,10 +136,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="7" class="link-to-prism">src/auth/entity/user_sms_code.entity.ts:7</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/auth/entity/user_sms_code.entity.ts:19</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>identifier of entity</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -164,10 +177,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/auth/entity/user_sms_code.entity.ts:14</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/auth/entity/user_sms_code.entity.ts:38</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>sms code</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -199,10 +218,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/auth/entity/user_sms_code.entity.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/auth/entity/user_sms_code.entity.ts:29</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>edge to user</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -214,15 +239,39 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Column, Entity, JoinColumn, OneToMany, OneToOne, PrimaryGeneratedColumn } from &quot;typeorm&quot;;
 import { User } from &quot;./user.entity&quot;;
 
+/**
+ * user sms code entity represantation
+ *
+ * @export
+ * @class UserSmsCode
+ */
 @Entity({name: &quot;UserSMSCodes&quot;})
 export class UserSmsCode {
+    /**
+     * identifier of entity
+     *
+     * @type {number}
+     * @memberof UserSmsCode
+     */
     @PrimaryGeneratedColumn()
     id: number
 
+    /**
+     * edge to user
+     *
+     * @type {User}
+     * @memberof UserSmsCode
+     */
     @OneToOne(() &#x3D;&gt; User, user &#x3D;&gt; user, {eager: true,})
     @JoinColumn({name: &quot;userId&quot;})
     user: User
 
+    /**
+     * sms code
+     *
+     * @type {string}
+     * @memberof UserSmsCode
+     */
     @Column({name:&quot;smsCode&quot;})
     smsCode: string
 }</code></pre>
