--- a/documentation/injectables/JwtGuard.html
+++ b/documentation/injectables/JwtGuard.html
@@ -62,6 +62,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>jwt guard</p>
+
+            </p>
 
 
 
@@ -77,6 +84,13 @@
 import { AuthGuard } from &quot;@nestjs/passport&quot;;
 
 
+/**
+ * jwt guard
+ *
+ * @export
+ * @class JwtGuard
+ * @extends {AuthGuard(&#x27;jwt&#x27;)}
+ */
 @Injectable()
 export class JwtGuard extends AuthGuard(&#x27;jwt&#x27;) {
     
