--- a/documentation/injectables/JwtStrategy.html
+++ b/documentation/injectables/JwtStrategy.html
@@ -62,6 +62,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>jwt strategy</p>
+
+            </p>
 
 
 
@@ -105,12 +112,14 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/auth/jwt.strategy.ts:8</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/auth/jwt.strategy.ts:15</a></div>
                             </td>
                         </tr>
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Creates an instance of JwtStrategy.</p>
+</div>
                             <div>
                                     <b>Parameters :</b>
                                     <table class="params">
@@ -170,14 +179,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="19"
-                            class="link-to-prism">src/auth/jwt.strategy.ts:19</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="38"
+                            class="link-to-prism">src/auth/jwt.strategy.ts:38</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>validate pyalaod</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -231,8 +242,20 @@ import { AuthService } from &#x27;./auth.service&#x27;;
 import { ExtractJwt, Strategy } from &quot;passport-jwt&quot;;
 import { ConfigService } from &#x27;@nestjs/config&#x27;;
 
+/**
+ * jwt strategy
+ *
+ * @export
+ * @class JwtStrategy
+ * @extends {PassportStrategy(Strategy)}
+ */
 @Injectable()
 export class JwtStrategy extends PassportStrategy(Strategy) {
+    /**
+     * Creates an instance of JwtStrategy.
+     * @param {ConfigService} configService
+     * @memberof JwtStrategy
+     */
     constructor(
         private readonly configService: ConfigService
     ) {
@@ -243,6 +266,13 @@ export class JwtStrategy extends PassportStrategy(Strategy) {
         });
     }
 
+    /**
+     * validate pyalaod
+     *
+     * @param {*} payload
+     * @return {*} 
+     * @memberof JwtStrategy
+     */
     async validate(payload: any) {
         return { ...payload.role };
     }
