--- a/documentation/miscellaneous/functions.html
+++ b/documentation/miscellaneous/functions.html
@@ -92,6 +92,13 @@
 
 
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>entrypoint of programm</p>
+</div>
+
+                </td>
+            </tr>
         </tbody>
     </table>
 </section>
