--- a/documentation/modules/AuthModule.html
+++ b/documentation/modules/AuthModule.html
@@ -113,6 +113,13 @@
 
 
 
+        <p class="comment">
+            <h3>Description</h3>
+        </p>
+        <p class="comment">
+            <p>Auth module</p>
+
+        </p>
 
 
         <div class="container-fluid module">
@@ -155,6 +162,12 @@ import { PassportModule } from &#x27;@nestjs/passport&#x27;;
 import { JwtModule } from &#x27;@nestjs/jwt&#x27;;
 
 
+/**
+ * Auth module
+ *
+ * @export
+ * @class AuthModule
+ */
 @Module({
     imports: [
         TypeOrmModule.forFeature([BaseUser, User, Admin, UserSmsCode]),
